--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/home/senyan/.conda/envs/dl/bin/python"
+    "python.pythonPath": "/home/senyan/.conda/envs/dl/bin/python",
+    "python.linting.enabled": false
 }
